# pong

./: .gitignore  CMakeLists.txt  README.md  ball.cpp  ball.h  basic.shader  circle.cpp  circle.h  colliderbox.cpp  colliderbox.h  collisionmanager.cpp  collisionmanager.h  config.json  default.frag  ebo.cpp  ebo.h  gameobject.cpp  gameobject.h  glad.c  indexbuffer.cpp  indexbuffer.h  input.cpp  input.h  main.cpp  main.h  mesh.cpp  mesh.h  opponent.cpp  opponent.h  player.cpp  player.h  pong.cpp  pong.h  pong_config.json  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  renderutils.cpp  renderutils.h  (+21 more)
assets/: basic.shader  game.scene  gameover.scene  settings.scene  title.scene
components/: CMakeLists.txt  behavior.cpp  behavior.h  button.cpp  button.h  checkbox.cpp  checkbox.h  colliderbox.h  component.h  mesh.cpp  mesh.h  renderable.h  slider.cpp  slider.h  text.cpp  text.h  transform.h  uicomponent.cpp  uicomponent.h
engine/: CMakeLists.txt  applicationwindow.cpp  applicationwindow.h  audio.cpp  audio.h  audiomixer.cpp  audiomixer.h  behavior.cpp  behavior.h  circle.cpp  circle.h  colliderbox.cpp  colliderbox.h  collisionmanager.cpp  collisionmanager.h  component.cpp  component.h  componentmanager.cpp  componentmanager.h  config.cpp  config.h  difficulty.cpp  difficulty.h  engine.cpp  engine.h  enginecomponents.h  input.cpp  input.h  logger.cpp  logger.h  mesh.cpp  mesh.h  playingsound.cpp  playingsound.h  pong.cpp  pong.h  pongscenes.cpp  pongscenes.h  processeventvisitor.h  random.cpp  (+21 more)
engine/audio/: CMakeLists.txt  audiomixer.cpp  audiomixer.h  sound.h
engine/graphics/: CMakeLists.txt  circle.h  font.cpp  font.h  fontbank.cpp  fontbank.h  image.cpp  image.h  rectangle.h  textcharacter.cpp  textcharacter.h
engine/logger/: CMakeLists.txt  logger.h  realtimelogger.h
engine/scene/: CMakeLists.txt  componentdeserializer.cpp  componentdeserializer.h  sceneloader.cpp  sceneloader.h
engine/settings/: CMakeLists.txt  config.cpp  difficulty.h
gameobjects/: CMakeLists.txt  ball.cpp  ball.h  ballaudio.cpp  ballaudio.h  ballcollisions.cpp  ballcollisions.h  ballmovement.cpp  ballmovement.h  component.h  entity.cpp  entity.h  gamemenu.cpp  gamemenu.h  gameobject.cpp  gameobject.h  gameoverscreencontroller.cpp  gameoverscreencontroller.h  opponent.cpp  opponent.h  player.cpp  player.h  scorearea.cpp  scorearea.h  scorecontroller.cpp  scorecontroller.h  settingsscreencontroller.cpp  settingsscreencontroller.h  text.cpp  text.h  titlescreencontroller.cpp  titlescreencontroller.h  uimenu.cpp  uimenu.h  wall.cpp  wall.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glew-2.1.0/: CMakeLists.txt
glm-0.9.9.8/: .gitignore
imgui-1.89.9/: CMakeLists.txt
render/: CMakeLists.txt  graphic.cpp  graphic.h  indexbuffer.cpp  indexbuffer.h  renderer.cpp  renderer.h  renderutils.cpp  renderutils.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.h
tps/: CMakeLists.txt
ui/: CMakeLists.txt  button.cpp  button.h  checkbox.cpp  checkbox.h  slider.cpp  slider.h  text.cpp  text.h  uielement.cpp  uielement.h
